<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.NoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:animateLayoutChanges="true" >
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:elevation="@dimen/_5sdp"
                android:src="@drawable/back"
                app:tint="@color/colorIcons"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/saveTask"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/save"
                android:src="@drawable/done_24"
                app:tint="@color/colorWhite"
                android:padding="@dimen/_4sdp"
                android:elevation="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                />

            <View
                android:id="@+id/icon"
                android:layout_width="@dimen/_7sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/taskTitle"
                app:layout_constraintTop_toBottomOf="@id/imageBack"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintHorizontal_weight="1"
                android:background="@drawable/bg_search"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:hint="@string/enter_task_title"
                android:elevation="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:fontFamily="@font/ubuntubold"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textSize="17sp"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                android:inputType="textShortMessage" />
            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spinnerPriority"
                    android:layout_width="0dp"
                    android:elevation="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:entries="@array/priority_options"
                    android:prompt="@string/priority_prompt"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:gravity="center_horizontal"
                    style="@style/SpinnerStyle"
                    android:background="@drawable/bg_search"
                    app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                    app:layout_constraintEnd_toStartOf="@id/editTextDate"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDate"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/task_due_date"
                    android:inputType="datetime"
                    android:focusable="false"
                    android:elevation="@dimen/_5sdp"
                    android:padding="@dimen/_4sdp"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_search"
                    android:textColorHint="@color/colorTextHint"
                    app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                    app:layout_constraintEnd_toStartOf="@id/spinnerPriority"
                    android:onClick="showDatePickerDialog"
                    />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_135sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:elevation="@dimen/_6sdp"
                android:background="@drawable/bg_search"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:hint="@string/enter_task_description"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:fontFamily="@font/ubuntumedium"
                android:imeOptions="actionDone"

                android:importantForAutofill="no"
                android:textSize="17sp"
                android:gravity="center"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/linear"
                android:inputType="textShortMessage" />
            <ImageView
                android:id="@+id/colorpick"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/save"
                android:elevation="@dimen/_8sdp"
                android:src="@drawable/colorize_24"
                app:tint="@color/colorWhite"

                android:padding="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="@id/taskDescription"
                app:layout_constraintEnd_toEndOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>