<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:id="@+id/multi"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/text"
            android:fontFamily="@font/ubuntubold"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:includeFontPadding="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp"/>
        <ImageView
            android:id="@+id/delete"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/delete_24"
            android:layout_margin="@dimen/_10sdp"
            app:tint="@color/colorWhite"
            android:contentDescription="@string/app_name"
            />
        <ImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/cancel_24"
            android:layout_margin="@dimen/_10sdp"
            app:tint="@color/colorWhite"
            android:contentDescription="@string/app_name"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tasksview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:fontFamily="@font/ubuntubold"
        android:text="@string/my_tasks"
        android:includeFontPadding="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutsearch"
        android:background="@drawable/bg_search"
        android:layout_marginTop="@dimen/_15sdp"
        android:elevation="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tasksview">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/search_24"
            app:tint="@color/colorSearchIcon"
            android:contentDescription="@string/app_name" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputsearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/search_tasks"
            android:fontFamily="@font/ubuntulight"
            android:includeFontPadding="false"
            android:importantForAutofill="no"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColorHint="@color/colorTextHint"
            android:background="@null"
            android:imeOptions="actionDone"
            android:textSize="@dimen/_12sdp"
            android:inputType="textShortMessage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/imageAddNote"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="23dp"
            android:src="@drawable/outline_24"
            app:tint="@color/colorIcons" />
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="23dp"
            android:src="@drawable/image_24"
            app:tint="@color/colorIcons" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recycleView"
        android:layout_marginEnd="@dimen/_3sdp"

        android:paddingEnd="@dimen/_3sdp"
        android:paddingStart="@dimen/_2sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/layoutsearch"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        />
    
    <ImageView
        android:id="@+id/addTask"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_add_button"
        android:src="@drawable/add_24"
        app:tint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        android:contentDescription="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>